fix 404 page link color for dark mode

--- a/customize.dist/src/less2/pages/page-404.less
+++ b/customize.dist/src/less2/pages/page-404.less
@@ -29,6 +29,9 @@ html, body {
         #cp-scramble, #cp-link {
             font-size: 20px;
         }
+        #cp-link {
+            color: @cryptpad_color_link;
+        }
     }
 }
 
